Ticket #255 - Correctly cut off long title in block header.

--- a/template/css/common.css
+++ b/template/css/common.css
@@ -127,17 +127,20 @@ div.mce-fullscreen {
     flex-wrap: nowrap;
 }
 .bx-db-title {
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
 
-    line-height:40px;
+    line-height: 40px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .bx-db-menu {
-	-webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
-    flex: 0 1 auto;
+	-webkit-flex: 0 2 auto;
+    -ms-flex: 0 2 auto;
+    flex: 0 2 auto;
     
     line-height:40px;
 }
